[package]
name = "partial-enum"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "proc-macro generating partially inhabited enums"
homepage = "https://github.com/maximelenoir/partial-enum"
documentation = "https://docs.rs/partial-enum"
repository = "https://github.com/maximelenoir/partial-enum"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.103", features = ["full"] }
